<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/lightgray">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_entry"
            android:textSize="@dimen/dialog_header_text_size"
            android:textColor="#fff"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:contentDescription="@string/add_entry"/>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:id="@+id/current_vehicle_add_record_frag"
                android:textSize="20sp"/>

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="5"
                android:layout_marginTop="@dimen/grid_margin_top"
                android:layout_marginLeft="@dimen/grid_margin_l_r"
                android:layout_marginStart="@dimen/grid_margin_l_r"
                android:layout_marginRight="@dimen/grid_margin_l_r"
                android:layout_marginEnd="@dimen/grid_margin_l_r"
                android:layout_gravity="center">

                <TextView
                    android:textSize="@dimen/add_record_text_size"
                    android:text="@string/gas_station" />
                <EditText
                    android:id="@+id/station_location"
                    android:hint="@string/gas_station_hint"
                    android:gravity="start"
                    android:textColorHint="@color/verylightgrey"
                    android:textSize="@dimen/entry_text_size"
                    android:ems="5"
                    android:background="@color/entryTextBoxColor"
                    android:layout_marginBottom="@dimen/space_between_entry_fields"
                    android:inputType="textCapWords"
                    android:focusable="true"
                    android:contentDescription="@string/gas_station"
                    android:nextFocusDown="@+id/mileage"/>

                <TextView
                    android:textSize="@dimen/add_record_text_size"
                    android:text="@string/odometer"/>

                <EditText
                    android:id="@id/mileage"
                    android:hint="@string/odometer_hint"
                    android:textColorHint="@color/verylightgrey"
                    android:ems="5"
                    android:gravity="start"
                    android:inputType="numberDecimal|numberSigned"
                    android:textSize="@dimen/entry_text_size"
                    android:background="@color/entryTextBoxColor"
                    android:layout_marginBottom="@dimen/space_between_entry_fields"
                    android:contentDescription="@string/odometer_hint"
                    android:focusable="true"
                    android:nextFocusDown="@+id/gallons"/>

                <TextView
                    android:textSize="@dimen/add_record_text_size"
                    android:text="@string/gallons"/>

                <EditText
                    android:id="@id/gallons"
                    android:hint="@string/quantity_hint"
                    android:gravity="start"
                    android:textColorHint="@color/verylightgrey"
                    android:inputType="numberDecimal|numberSigned"
                    android:textSize="@dimen/entry_text_size"
                    android:ems="5"
                    android:background="@color/entryTextBoxColor"
                    android:layout_marginBottom="@dimen/space_between_entry_fields"
                    android:contentDescription="@string/quantity_hint"
                    android:focusable="true"
                    android:nextFocusDown="@+id/price"/>

                <TextView
                    android:textSize="@dimen/add_record_text_size"
                    android:text="@string/price"/>

                <EditText
                    android:id="@id/price"
                    android:gravity="start"
                    android:hint="@string/price_hint"
                    android:textColorHint="@color/verylightgrey"
                    android:inputType="numberDecimal|numberSigned"
                    android:textSize="@dimen/entry_text_size"
                    android:ems="5"
                    android:background="@color/entryTextBoxColor"
                    android:layout_marginBottom="@dimen/space_between_entry_fields"
                    android:contentDescription="@string/price_hint"
                    android:focusable="true"
                    android:nextFocusDown="@+id/date"/>

                <TextView
                    android:textSize="@dimen/add_record_text_size"
                    android:text="@string/date"/>

                <EditText
                    android:id="@id/date"
                    android:inputType="date"
                    android:hint="@string/date_hint"
                    android:textSize="@dimen/entry_text_size"
                    android:ems="5"
                    android:gravity="start"
                    android:layout_marginRight="56dp"
                    android:layout_marginEnd="56dp"
                    android:background="@color/entryTextBoxColor"
                    android:contentDescription="@string/date"
                    android:focusable="true"/>
            </GridLayout>

            <Button
                android:id="@+id/add_record"
                style="@style/button_style"
                android:background="@drawable/custom_button"
                android:textSize="@dimen/edit_record_button"
                android:singleLine="true"
                android:text="@string/add_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="12dp"
                android:layout_gravity="center"
                android:elevation="6dp"
                android:contentDescription="@string/add_record_button_description"
                android:focusable="true"/>
            </LinearLayout>
        </ScrollView>
</LinearLayout>
